add task history route
